# elyria-admission-runtime

./: .dockerignore  AUTH_RBAC.md  A_PLUS_VERIFICATION_GATE.md  BUYER_READOUT.md  BUYER_REVIEW_INDEX.md  CHANGED_CONDITION_REPLAY.md  CLAIM_BOUNDARY.md  DEPLOYMENT_SECURITY_CHECKLIST.md  Dockerfile  FRESH_CLONE_REVIEW_TEST.md  LICENSE  NO_BIND_PROOF.md  POLICY_PACKS.md  PORTFOLIO_POSITION.md  PRODUCTION_PREFLIGHT.md  PRODUCTION_SIGNING_ADAPTER.md  PROOF_OR_DEMO_PATH.md  PROPRIETARY_NOTICE.md  PUBLIC_RELEASE_CHECKLIST.md  README.md  RELEASE_PUBLICATION_STEPS.md  RELEASE_SYNC_STATUS.md  RELEASE_SYNC_V0_8_2.md  RELEASE_V0_8_PUBLIC.md  REPO_PUSH_COMMANDS.md  REVIEWER_QUICKSTART.md  ROADMAP_A_PLUS_BUYER_REVIEW.md  ROUTE_CLOSURE_PROOF.md  STATUS.md  TENANT_ISOLATION.md  TRACEABILITY_MATRIX.md  VERIFICATION_EVIDENCE_TEMPLATE.md  docker-compose.yml  pyproject.toml  requirements.txt
apps/: __init__.py
assets/: README.md
commercial/: pricing_structure.md  sow_starter.md
docs/: 02_consequence_twin_scan.md  03_architecture.md  04_deliverables.md  06_pilot_implementation.md  08_full_stack_system_architecture.md  09_runtime_quickstart.md  15_evidence_enforcement.md  16_current_main_release_sync.md  README_INDEX.md
examples/: demo_proof_packet.json  public_demo_proof_packet.example.json  sample_assessments.json
external_verifier/: __init__.py  verify_audit_chain.py  verify_bundle.py  verify_no_bind.py  verify_receipt.py
schemas/: consequence_edge.schema.json  consequence_node.schema.json  exposure_graph.schema.json
scripts/: verify_all.py
tests/: test_api_runtime.py  (+13 more)
(+36 files in other folders)
